add dynamic feature module

--- a/Extractor/Gradle/sandbox/android-application/src/main/res/values/strings.xml
+++ b/Extractor/Gradle/sandbox/android-application/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Bibliothekar sandbox application</string>
+    <string name="title_android_dynamic">sandox-dynamic</string>
 </resources>
